--- a/java/images.yml
+++ b/java/images.yml
@@ -2,7 +2,7 @@
 fish-pepper:
   params:
     - base
-  name: "fabric8/s2i-java"
+  name: "jpoth/openjdk-9-fabric8-s2i"
   build: "2.0.2"
 
 # Used for escaping in 'agent-bond-opts' where the same delimiters are used
@@ -12,18 +12,10 @@ abSepClosed: "}}"
 config:
   base:
     jboss:
-      from: "jboss/base-jdk:8"
+      from: "jpoth/openjdk-9:GA"
       user: "jboss"
-      description: "JBoss S2I Java builder image with OpenJDK 8"
+      description: "jpoth S2I Java builder image with OpenJDK 9"
       lib:
         version:
           maven: "3.3.3"
           jolokia: "1.3.6"
-    rhel:
-      from: "jboss/openjdk18-rhel7:1.0-11"
-      user: "jboss"
-      description: "RHEL S2I Java builder image with OpenJDK 8"
-      lib:
-        version:
-          maven: "3.3.3-1.el7"
-          jolokia: "1.3.6.redhat-1"
